Fix heading alignments

--- a/source/assets/stylesheets/_elements.headings.scss
+++ b/source/assets/stylesheets/_elements.headings.scss
@@ -28,6 +28,8 @@ h4 {
 
   position: relative;
 
+  clear: none;
+
   &::before, &::after {
     content: '';
 
@@ -57,6 +59,8 @@ h4 {
 
 h1 {
 
+  text-align: center;
+
   font-size: ms(4);
   color: $color-text-heading-1;
 
@@ -76,7 +80,7 @@ h1 {
       display: none;
 
     }
-    
+
   }
 
 }
